<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/confirmation"
        android:layout_width="fill_parent"
        android:layout_height="152dp"
        android:hint="@string/confirmation"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:text="@string/confirm"
        android:background="@color/prettyRed"/>

    <Button
        android:id="@+id/leaderboard"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:text="@string/back"
        android:background="@color/prettyGreen"/>
</LinearLayout>
