<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/kirby_forest">

    <EditText
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="120dp"
        android:hint="@string/player_name"
        android:gravity="center"
        android:textSize="35dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:shadowColor="@color/white"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/score"
        android:layout_width="fill_parent"
        android:layout_height="120dp"
        android:hint="@string/score"
        android:gravity="center"
        android:textSize="35dp"
        android:text="bold"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:textColorHighlight="@color/prettyGreen"
        android:shadowColor="@color/black"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        android:inputType="phone" />

    <Button
        android:id="@+id/save_stat"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="160dp"
        android:background="@mipmap/baseline_save_black_24"
        android:gravity="center"
        android:shadowColor="@color/black"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"/>
    <Button
        android:id="@+id/save_also"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="0dp"
        android:layout_marginHorizontal="160dp"
        android:gravity="center"
        android:shadowColor="@color/black"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        android:text="@string/save"
        android:background="?android:attr/selectableItemBackground"
        android:textSize="20dp">
    </Button>
</LinearLayout>
